--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
 </head>
 <body>
-
 <h1>This is a heading</h1>
+  <?php
+echo "My first PHP script!";
+?>
 <p>This is a paragraph.</p>
-
 </body>
 </html>
